--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdk = 33
-
+    namespace = "com.example.flutter_camera_effects"
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
